syntax = "proto3";

import "common/v1/health.proto";

package d2.auth.v1;

option csharp_namespace = "D2.Services.Protos.Auth.V1";

// *********************************
// **** AuthService gRPC API *******
// *********************************

service AuthService {
  // Health check â€” pings all dependencies (DB, cache, messaging).
  rpc CheckHealth(d2.common.v1.CheckHealthRequest)
      returns (d2.common.v1.CheckHealthResponse);
}
